k8s/xfe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xfe
spec:
  replicas: 3
  selector:
    matchLabels:
      app: xfe-pod
  template:
    metadata:
      labels:
        app: xfe-pod
    spec:
      containers:
        - name: xfe-app
          image: larskj/xfe:v4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
              name: api
            - containerPort: 8889
              name: monitoring
