k8s/xfe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xfe-service
spec:
  selector:
    app: xfe-pod
  ports:
    - port: 8080
      name: api
      protocol: TCP
      targetPort: api
    - port: 8081
      name: monitoring
      protocol: TCP
      targetPort: monitoring
    - port: 8082
      name: net
      protocol: TCP
      targetPort: net
  type: ClusterIP
