k8s/xfe/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: xfe-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /api/
            backend:
              serviceName: xfe-service
              servicePort: 8080
          - path: /monitoring
            backend:
              serviceName: xfe-service
              servicePort: 8081
